--- a/ext-core-interpreter.cabal
+++ b/ext-core-interpreter.cabal
@@ -17,6 +17,6 @@ cabal-version:       >=1.8
 executable ext-core-interpreter
   main-is:           Main.lhs
   other-modules:                         
-  build-depends:       base ==4.5.*, unix ==2.5.*, bytestring ==0.9.*, containers ==0.4.*, filepath ==1.3.*, ghc >= 7.4.1, array >= 0.4
+  build-depends:       base ==4.5.*, unix ==2.5.*, bytestring ==0.9.*, containers ==0.4.*, filepath ==1.3.*, ghc >= 7.4.1, array >= 0.4, extcore >= 1.0 
   build-tools:         happy
   Hs-source-dirs:   src
