--- a/dart-for-haskell.cabal
+++ b/dart-for-haskell.cabal
@@ -20,6 +20,6 @@ executable hs-dart
                      DART.FunctionFeeder
                      DART.MkRandomValue
                      Language.Core.ValueDefinition
-  build-depends:       base ==4.5.*, unix ==2.5.*, bytestring ==0.9.*, containers ==0.4.*, filepath ==1.3.*, ghc >= 7.4.1, array >= 0.4, extcore >= 1.0, zenc >= 0.1, random >= 1.0, regex-applicative >= 0.2.1 && <= 0.3
+  build-depends:       base ==4.5.*, unix ==2.5.*, bytestring ==0.9.*, containers ==0.4.*, filepath ==1.3.*, ghc >= 7.4.1, array >= 0.4, extcore >= 1.0, zenc >= 0.1, random >= 1.0, parsec >= 3.1.2
   build-tools:         happy
   Hs-source-dirs:   src
