--- a/hs-dart.cabal
+++ b/hs-dart.cabal
@@ -22,6 +22,6 @@ executable hs-dart
                     Language.Core.ValueDefinition
                     Language.Core.TypeExtractor
                     Language.Core.TypeExtractor.DataTypes
-  build-depends:       base ==4.5.*, unix ==2.5.*, bytestring ==0.9.*, containers ==0.4.*, filepath ==1.3.*, ghc >= 7.4.1, array >= 0.4, extcore >= 1.0, zenc >= 0.1, random >= 1.0, parsec >= 3.1.2, hashtables >= 1.0.1.8, mtl >= 2.1.1, transformers >= 0.3, primitive >= 0.5.0
+  build-depends:       base ==4.5.*, unix ==2.5.*, bytestring ==0.9.*, containers ==0.4.*, filepath ==1.3.*, ghc >= 7.4.1, array >= 0.4, extcore >= 1.0, zenc >= 0.1, random >= 1.0, parsec >= 3.1.2, hashtables >= 1.0.1.8, mtl >= 2.1.1, transformers >= 0.3, primitive >= 0.5.0, time >= 1.4
   build-tools:         happy
   Hs-source-dirs:   src
