--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -14,6 +14,8 @@ category:            Language
 build-type:          Simple
 cabal-version:       >=1.8
 
+tested-with:         GHC==6.4.2, GHC==7.6.1, GHC==7.6.2
+
 executable dart-haskell
   main-is:           Main.lhs
   other-modules:        
@@ -22,6 +24,31 @@ executable dart-haskell
                     Language.Core.ValueDefinition
                     Language.Core.TypeExtractor
                     Language.Core.TypeExtractor.DataTypes
-  build-depends:       base == 4.5.*, unix ==2.5.*, bytestring == 0.9.*, containers ==0.4.*, filepath ==1.3.*, ghc >= 7.4.1, array >= 0.4, extcore >= 1.0, zenc >= 0.1, random >= 1.0, parsec >= 3.1.2, hashtables >= 1.0.1.8, mtl >= 2.1.1, transformers >= 0.3, primitive >= 0.5.0, time >= 1.4, cmdargs >= 0.10, process-conduit >= 0.5, utf8-string >= 0.3.7, directory >= 1.1
+  build-depends:
+                    ghc >= 7.4.2 ,     
+                    -- ghc-7.4.2
+                    -- base == 4.5.*, bytestring == 0.9.*, containers ==0.4.*, directory >= 1.1, unix ==2.5.*, extcore >= 1.0 <= 1.0.2
+                    -- ghc-7.6.1
+                       base == 4.6.*, bytestring == 0.10.*, containers ==0.5.*, directory >= 1.2, unix ==2.6.*, extcore >= 1.0 
+                    -- filesystem
+                      , filepath ==1.3.*
+                      , cmdargs >= 0.10 
+                      , process-conduit >= 0.5
+                    -- common
+                      , array >= 0.4 
+                      , random >= 1.0
+                      , primitive >= 0.5.0
+                      , time >= 1.4
+                    -- core utils
+                      , zenc >= 0.1
+                      , parsec >= 3.1.2
+                    -- data structures
+                      , hashtables >= 1.0.1.8
+                    -- control
+                      , transformers >= 0.3
+                      , mtl >= 2.1.1
+                    -- text
+                      , utf8-string >= 0.3.7
+
   build-tools:         happy
   Hs-source-dirs:   src
