--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -19,6 +19,8 @@ tested-with:         GHC==6.4.2, GHC==7.6.1, GHC==7.6.2
 executable dart-haskell
   main-is:           Main.lhs
   other-modules:        
+                    DART.FileIO
+                    DART.CmdLine
                     DART.FunctionFeeder
                     DART.MkRandomValue
                     Language.Core.Vdefg
