--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -17,7 +17,7 @@ cabal-version:       >=1.8
 tested-with:         GHC==6.4.2, GHC==7.6.1, GHC==7.6.2
 
 executable dart-haskell
-  main-is:           Main.lhs
+  main-is:           Main.hs
   other-modules:        
                     DART.FunctionFeeder
                     DART.FileIO
