Evaluable type class (#12); evaluates let expressions; passes fibonacci test

--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -31,6 +31,7 @@ executable dart-haskell
                     Language.Core.Interpreter,
                     Language.Core.Interpreter.Structures,
                     Language.Core.Interpreter.Apply,
+                    Language.Core.Interpreter.Evaluable,
                     Language.Core.Interpreter.Libraries,
                     Language.Core.Interpreter.Libraries.GHC.Classes
                     Language.Core.Interpreter.Libraries.GHC.CString,
