Adds DART.Compiler.JIT; Evalubale Vdefg; (work towards #15 but it doesn't work yet, defs must be also written to dart-jit.hs)

--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -23,6 +23,7 @@ executable dart-haskell
   main-is:           Main.hs
   ghc-options:       -prof -fprof-auto
   other-modules:        
+                    DART.Compiler.JIT                    
                     DART.FunctionFeeder,
                     DART.FileIO,
                     DART.InterpreterSettings,
