--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -63,6 +63,7 @@ executable dart-haskell
                       , random >= 1.0
                       , primitive >= 0.5.0
                       , time >= 1.4
+                      , regex-posix 
                     -- core utils
                       , zenc >= 0.1
                       , parsec >= 3.1.2
