--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -19,41 +19,48 @@ tested-with:
                      GHC==7.6.1,
                      GHC==7.6.2
 
-executable dart-haskell
-  main-is:           Main.hs
-  ghc-options:       -prof -fprof-auto
-  other-modules:        
-                    DART.Compiler.JIT                    
-                    DART.FunctionFeeder,
-                    DART.FileIO,
-                    DART.InterpreterSettings,
-                    DART.CmdLine,
-                    DART.MkRandomValue,
-                    DART.MkRandom,
-                    DART.ModuleTester
-                    DART.ModuleTester.Testable,
-                    DART.ExtCore.TypeExtractor,
-                    DART.ExtCore.TypeExtractor.DataTypes,
-                    Language.Core.Util,
-                    Language.Core.Interpreter,
-                    Language.Core.Interpreter.Structures,
-                    Language.Core.Interpreter.Apply,
-                    Language.Core.Interpreter.Evaluable,
-                    Language.Core.Interpreter.Libraries,
-                    Language.Core.Interpreter.Libraries.GHC.Classes
-                    Language.Core.Interpreter.Libraries.GHC.CString,
-                    Language.Core.Interpreter.Libraries.GHC.Num,
-                    Language.Core.Interpreter.Libraries.GHC.Tuple,
-                    Language.Core.Interpreter.Libraries.GHC.Types,
-                    Language.Core.Interpreter.Libraries.GHC.Real,
-                    Language.Core.Interpreter.Util
-                    Language.Core.Vdefg
-  build-depends:
-                    ghc >= 7.6.1 ,     
-                    -- ghc-7.4.2
+library 
+ Hs-source-dirs:   src
+ exposed-modules:
+                 DART.Run 
+                 DART.Compiler.JIT                    
+                 DART.FunctionFeeder,
+                 DART.FileIO,
+                 DART.InterpreterSettings,
+                 DART.CmdLine,
+                 DART.MkRandomValue,
+                 DART.MkRandom,
+                 DART.ModuleTester
+                 DART.ModuleTester.Testable,
+                 DART.ExtCore.TypeExtractor,
+                 DART.ExtCore.TypeExtractor.DataTypes,
+                 Language.Core.Util,
+                 Language.Core.Interpreter.Acknowledge,
+                 Language.Core.Interpreter,
+                 Language.Core.Interpreter.Structures,
+                 Language.Core.Interpreter.Apply,
+                 Language.Core.Interpreter.Evaluable,
+                 Language.Core.Interpreter.Libraries,
+                 Language.Core.Interpreter.Libraries.Monomophy,
+                 Language.Core.Interpreter.Libraries.GHC.Classes
+                 Language.Core.Interpreter.Libraries.GHC.CString,
+                 Language.Core.Interpreter.Libraries.GHC.Err,
+                 Language.Core.Interpreter.Libraries.GHC.Num,
+                 Language.Core.Interpreter.Libraries.GHC.Prim,
+                 Language.Core.Interpreter.Libraries.GHC.Real,
+                 Language.Core.Interpreter.Libraries.GHC.Show,
+                 Language.Core.Interpreter.Libraries.GHC.Tuple,
+                 Language.Core.Interpreter.Libraries.GHC.Types,
+                 Language.Core.Interpreter.Util
+                 Language.Core.Vdefg
+ build-depends:
+                      ghc >= 7.6.1 ,     
+                    -- ghc-7.4.2 (not recommended, has -fext-core bugs)
                     -- base == 4.5.*, bytestring == 0.9.*, containers ==0.4.*, directory >= 1.1, unix ==2.5.*, extcore >= 1.0 <= 1.0.2
+
                     -- ghc-7.6.1
                        base == 4.6.*, bytestring == 0.10.*, containers ==0.5.*, directory >= 1.2, unix ==2.6.*, extcore >= 1.0 
+
                     -- filesystem/os
                       , filepath ==1.3.*
                       , cmdargs >= 0.10 
@@ -75,11 +82,26 @@ executable dart-haskell
                     -- text
                       , utf8-string >= 0.3.7
 
-  build-tools:         happy
-  Hs-source-dirs:   src
+executable dart-haskell
+  main-is:           Main.hs
+--  ghc-options:       -prof -fprof-auto
+--  other-modules:          
+--  build-tools:         happy  
+  build-depends:  base == 4.6.* 
+                , cmdargs >= 0.10 
+                , mtl >= 2.1.1 
+                , dart-haskell
 
 Test-Suite test-interpreter
-    --hs-source-dirs: test
-    type:       detailed-0.9
-    test-module: MyTest
-    build-depends: base
+    type:       exitcode-stdio-1.0
+    hs-source-dirs: test, src
+    main-is:    Language/Core/TestInterpreter.hs    
+    other-modules: 
+                DART.TestUtils, 
+                --Language.Core.Interpreter.Libraries.GHC.TestNum
+                Language.Core.Interpreter.Libraries.GHC.TestNum
+    build-depends: base, 
+--                   dart-haskell == 0.1
+                   -- Ideally, this wouldn't be needed, but listing `dart-haskell` as a dependency is not enough..
+                   filepath, process, directory, extcore, hashtables, zenc, cmdargs, mtl, primitive, transformers, utf8-string, bytestring, time, regex-posix, parsec, random
+                   , HUnit >= 1.2.5
