Adds Lang.Core.Module; Examples.Testing.OnTrees; removes ModuleFunction

--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -52,6 +52,7 @@ library
                  Language.Core.Interpreter.Libraries.GHC.Tuple,
                  Language.Core.Interpreter.Libraries.GHC.Types,
                  Language.Core.Interpreter.Util
+                 Language.Core.Module
                  Language.Core.Vdefg
  build-depends:
                       ghc >= 7.6.1 ,     
