Closes #22: test functions of arity greater than 2; Value definitions types are now Ty's (almost deprecating TypeExtractor, see #32); adds GHC.Classes.(&&)

--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -35,6 +35,7 @@ library
                  DART.ExtCore.TypeExtractor,
                  DART.ExtCore.TypeExtractor.DataTypes,
                  Language.Core.Util,
+                 Language.Core.Ty,
                  Language.Core.Interpreter.Acknowledge,
                  Language.Core.Interpreter,
                  Language.Core.Interpreter.Structures,
