Renames InterpreterSettings to DARTSettings; rndInt :: IM Int now uses minimum and maximum bounds from settings

--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -26,7 +26,7 @@ library
                  DART.Compiler.JIT                    
                  DART.FunctionFeeder,
                  DART.FileIO,
-                 DART.InterpreterSettings,
+                 DART.DARTSettings,
                  DART.CmdLine,
                  DART.MkRandomValue,
                  DART.MkRandom,
