--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -18,7 +18,7 @@ tested-with:
                      GHC==6.4.2,
                      GHC==7.6.1,
                      GHC==7.6.2
-                     GHC==7.8.2
+--                     GHC==7.8.2
 
 library 
  Hs-source-dirs:   src
@@ -64,10 +64,10 @@ library
                     -- base == 4.5.*, bytestring == 0.9.*, containers ==0.4.*, directory >= 1.1, unix ==2.5.*, extcore >= 1.0 <= 1.0.2
 
                     -- ghc-7.6.1
-                    -- base == 4.6.*, bytestring == 0.10.*, containers ==0.5.*, directory >= 1.2, unix ==2.6.*, extcore >= 1.0
+                    base == 4.6.*, bytestring == 0.10.*, containers ==0.5.*, directory >= 1.2, unix ==2.6.*, extcore >= 1.0
 
                     -- ghc 7.8.2 or greater?
-                       base == 4.7.*, bytestring == 0.10.*, containers ==0.5.*, directory >= 1.2, unix ==2.7.*, extcore >= 1.0
+                    --   base == 4.7.*, bytestring == 0.10.*, containers ==0.5.*, directory >= 1.2, unix ==2.7.*, extcore >= 1.0
 
                     -- filesystem/os
                       , filepath ==1.3.*
