Adds applied_types to a DataCon.
Rewrites to: data DataCon = MkDataCon { datacon_name :: Id, signature ::
[Ty], applied_types :: [Ty]}

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-*.chi
-*.chs.h
-.virthualenv
-virthualenv.log
-*#
+.#*
+#*
+
+*.hcr
 src/*.hcr
 examples/interpreter/*.hcr
 examples/testing/*.hcr
@@ -24,3 +23,6 @@ cabal-dev
 .dist-buildwrapper
 .project
 report.org
+
+.virthualenv
+virthualenv.log
