--- a/dart-haskell.cabal
+++ b/dart-haskell.cabal
@@ -114,16 +114,29 @@ Test-Suite test-dart-haskell
                 Language.Core.Interpreter.Libraries.GHC.TestNum
                 Language.Core.Ty
     build-depends: base, 
-                   dart-haskell == 0.1
-                    -- common
+                 -- ghc-7.6.1
+                    base == 4.6.*, bytestring == 0.10.*, containers ==0.5.*, directory >= 1.2, unix ==2.6.*, extcore >= 1.0
+                 -- filesystem/os
+                 , filepath ==1.3.*
+                 , cmdargs >= 0.10 
+                 , process >= 1.1
+                 -- common
                  , array >= 0.4 
                  , random >= 1.0
                  , primitive >= 0.5.0
                  , time >= 1.4
                  , regex-posix 
                  , ConfigFile >= 1.1
-                    -- control
+                 , MissingH >= 1.1
+                 -- core utils
+                 , zenc >= 0.1
+                 -- data structures
+                 , hashtables >= 1.0.1.8
+                 -- control
                  , transformers >= 0.3
-                   -- Ideally, this wouldn't be needed, but listing `dart-haskell` as a dependency is not enough..
---                   filepath, process, directory, extcore, hashtables, zenc, cmdargs, mtl, primitive, transformers, utf8-string, bytestring, time, regex-posix, ConfigFile >= 1.1, MissingH, parsec, random
-                   , HUnit >= 1.2.5
+                 , mtl >= 2.1.1
+                 , MonadRandom >= 0.1.9
+                 -- text
+                 , utf8-string >= 0.3.7
+                 -- testing
+                 , HUnit >= 1.2.5
